--- a/ANP_Desafio_Técnico.ipynb
+++ b/ANP_Desafio_Técnico.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPTMYqzi6E2px6zgLuxQ0Od",
+      "authorship_tag": "ABX9TyP6C3/3Yi5SPXWY8jecDIyL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
         "\n",
         "*Data: 16/06/2025*\n",
         "\n",
-        "*Resumo: Código com objetivo de extrair dados pré definidos vindos de um arquivo DLIS, organiza-los como um DataFrame, realizar a limpeza e visualização dos dados e uma análise estatística.*\n",
+        "*Resumo: Código desenvolvido para extrair curvas específicas de um arquivo DLIS, organizar os dados em um DataFrame do pandas, realizar a limpeza dos valores ausentes, gerar visualizações dos perfis e executar uma análise estatística básica das curvas registradas no poço.*\n",
         "___"
       ],
       "metadata": {
